--- a/armonitor-ejb/src/main/resources/mailtemplate_en.properties
+++ b/armonitor-ejb/src/main/resources/mailtemplate_en.properties
@@ -1,3 +1,6 @@
 deploy.resources=/templates/deploy/
 deploy.subject=/templates/deploy/subject_en.html
 deploy.content=/templates/deploy/content_en.html
+test.resources=/templates/test/
+test.subject=/templates/test/subject_en.html
+test.content=/templates/test/content_en.html
