Create test connection for SCM and BTS.

--- a/armonitor-ejb/src/main/resources/org/lorislab/armonitor/process/resources/ErrorKeys_en.properties
+++ b/armonitor-ejb/src/main/resources/org/lorislab/armonitor/process/resources/ErrorKeys_en.properties
@@ -1,2 +1,6 @@
 ErrorKeys.ERROR_SEND_EMAIL=Error send the email to address {0}.
 ErrorKeys.ERROR_EMAIL_IS_NULL=The email address is null!
+ErrorKeys.NO_SCM_SYSTEM_FOUND=No source control system configuration found.
+ErrorKeys.ERROR_CREATE_SCM_CONNECTION=Error connect the {0} SCM server. {1}.
+ErrorKeys.NO_BT_SYSTEM_FOUND=No bug tracking system configuration found.
+ErrorKeys.ERROR_CREATE_BT_CONNECTION=Error connect the {0} BT server. {1}.
