Create agent test connection service.

--- a/armonitor-ejb/src/main/resources/org/lorislab/armonitor/process/resources/ErrorKeys_en.properties
+++ b/armonitor-ejb/src/main/resources/org/lorislab/armonitor/process/resources/ErrorKeys_en.properties
@@ -4,3 +4,5 @@ ErrorKeys.NO_SCM_SYSTEM_FOUND=No source control system configuration found.
 ErrorKeys.ERROR_CREATE_SCM_CONNECTION=Error connect the {0} SCM server. {1}.
 ErrorKeys.NO_BT_SYSTEM_FOUND=No bug tracking system configuration found.
 ErrorKeys.ERROR_CREATE_BT_CONNECTION=Error connect the {0} BT server. {1}.
+ErrorKeys.NO_AGENT_FOUND=No agent configuration found.
+ErrorKeys.ERROR_CREATE_AGENT_CONNECTION=Error connect the {0} agent. {1}.
