Add deployment service.

--- a/armonitor-web/src/main/resources/org/lorislab/armonitor/web/rs/resources/Errors_en.properties
+++ b/armonitor-web/src/main/resources/org/lorislab/armonitor/web/rs/resources/Errors_en.properties
@@ -2,3 +2,4 @@ Errors.DASHBOARD_LOAD_ERROR=Load the dashboard created error.
 Errors.DASHBOARD_UPDATE_SYSTEM_BUILD_ERROR=Load update system build error.
 Errors.SCM_DELETE_ERROR=Error by deleting the source code system.
 Errors.WRONG_USER_OR_PASSWORD=The user or password is wrong.
+Errors.DEPLOY_REQUEST_IS_NULL=No deployment request send.
