--- a/armonitor-ejb/src/main/resources/org/lorislab/armonitor/process/resources/ErrorKeys_en.properties
+++ b/armonitor-ejb/src/main/resources/org/lorislab/armonitor/process/resources/ErrorKeys_en.properties
@@ -6,3 +6,4 @@ ErrorKeys.NO_BT_SYSTEM_FOUND=No bug tracking system configuration found.
 ErrorKeys.ERROR_CREATE_BT_CONNECTION=Error connect the {0} BT server. {1}.
 ErrorKeys.NO_AGENT_FOUND=No agent configuration found.
 ErrorKeys.ERROR_CREATE_AGENT_CONNECTION=Error connect the {0} agent. {1}.
+ErrorKeys.NO_BUILD_FOR_GUID_AND_APPLICATION_FOUND=No build {0} for the system {1} found.
